--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,5 @@ title: oneNeko
 url: http://oneneko.github.io
 feed: /atom.xml
 author_info: <a href="http://oneneko.github.io">oneNeko</a>
+markdown:    redcarpet
+highlighter: rouge
