--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,5 @@ url: http://oneneko.github.io
 feed: /atom.xml
 author_info: <a href="http://oneneko.github.io">oneNeko</a>
 markdown:    redcarpet
-highlighter: rouge
+redcarpet:
+    extensions: [ "hard_wrap","autolink", "tables", "strikethrough", "superscript", "with_toc_data", "highlight", "prettify","no_intra_emphasis"]
