--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 permalink: /:title.html
 
-title: oneNeko
-url: http://oneneko.github.io
+title: Mouleon
+url: http://mouleon.com
 feed: /atom.xml
-author_info: <a href="http://oneneko.github.io">oneNeko</a>
+author_info: <a href="http://Mouleon.github.io">Mouleon</a>
