--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,12 @@
-permalink: /category/:title.html
+permalink: /:title.html
 
 title: Mouleon
 url: http://mouleon.com
 feed: /atom.xml
 author_info: <a href="http://Mouleon.github.io">Mouleon</a>
+description: "Do not go gentle into that good night..."
+keywords: Mouleon'blog
+since: 2019
+paginate: 10
+cdn: https://cdn.jsdelivr.net/gh/Mouleon/mouleon.github.io
+excerpt_separator:  '<!-- more -->'
