--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,11 @@ feed: /atom.xml
 author_info: <a href="http://Mouleon.github.io">Mouleon</a>
 description: "Do not go gentle into that good night..."
 keywords: Mouleon,Blog,C++,Python,Python爬虫，博客
+
+kramdown:
+  input: GFM
+highlighter: Rouge
 since: 2019
-paginate: 10
+
 cdn: https://cdn.jsdelivr.net/gh/Mouleon/mouleon.github.io
 excerpt_separator:  '<!-- more -->'
