--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,14 @@ author_info: <a href="http://Mouleon.github.io">Mouleon</a>
 description: "Do not go gentle into that good night..."
 keywords: Mouleon,Blog,C++,Python,Python爬虫，博客
 
+
+plugins: [jekyll-paginate]
+paginate: 5
+paginate_path: "page/:num/"
+
 highlighter: Rouge
 since: 2019
 
 cdn: https://cdn.jsdelivr.net/gh/Mouleon/mouleon.github.io
 excerpt_separator:  '<!-- more -->'
+categories: blog,jekyll,database,mysql,ubuntu
