--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ author_info: <a href="http://Mouleon.github.io">Mouleon</a>
 description: "Do not go gentle into that good night..."
 keywords: Mouleon,Blog,C++,Python,Python爬虫，博客
 
-
-plugins: [jekyll-paginate]
+gems: [jekyll-paginate]
+plugins_dir: [jekyll-paginate]
 paginate: 5
 paginate_path: "page/:num/"
 
