--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ title: Mouleon
 url: http://mouleon.com
 feed: /atom.xml
 author_info: <a href="http://Mouleon.github.io">Mouleon</a>
-description: "Do not go gentle into that good night..."
-keywords: Mouleon,Blog,C++,Python,Python爬虫，博客
+description: "Mouleon的个人博客"
+keywords: 算法,C++,Python,Python爬虫,Mouleon,Blog,博客
 
 gems: [jekyll-paginate]
 plugins_dir: [jekyll-paginate]
