--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,11 @@ author_info: <a href="http://Mouleon.github.io">Mouleon</a>
 description: "Mouleon的个人博客"
 keywords: 算法,C++,Python,Python爬虫,Mouleon,Blog,博客
 
-gems: [jekyll-paginate]
-plugins_dir: [jekyll-paginate]
+gems: [jekyll-paginate,jekyll-admin]
+plugins_dir: [jekyll-paginate,jekyll-admin]
 paginate: 10
 paginate_path: "page/:num/"
-plugins: [jekyll-paginate]
+plugins: [jekyll-paginate,jekyll-admin]
 
 highlighter: Rouge
 since: 2019
