--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 permalink: /:title.html
 
-title: Mouleon
-url: http://mouleon.com
+title: oneNeko
+url: https://oneNeko.com
 feed: /atom.xml
-author_info: <a href="http://Mouleon.github.io">Mouleon</a>
-description: "嗨，我是Mouleon，一名C++开发者，有时也会用Python鼓捣一些有趣的东西..."
-keywords: 算法,C++,Python,Python爬虫,Mouleon,Blog,博客
+author_info: <a href="http://oneNeko.github.io">oneNeko</a>
+description: "嗨，我是oneNeko，一名C++开发者，有时也会用Python鼓捣一些有趣的东西..."
+keywords: 算法,C++,Python,Python爬虫,oneNeko,Blog,博客
 
 paginate: 10
 paginate_path: "page/:num/"
@@ -14,5 +14,5 @@ plugins: [jekyll-paginate]
 highlighter: Rouge
 since: 2019
 
-cdn: https://cdn.jsdelivr.net/gh/Mouleon/mouleon.github.io
+cdn: https://cdn.jsdelivr.net/gh/oneNeko/oneNeko.github.io
 excerpt_separator:  '<!-- more -->'
