--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 permalink: /:title.html
 
 title: oneNeko
-url: https://oneNeko.com
+url: https://blog.oneneko.com
 feed: /atom.xml
-author_info: <a href="http://oneNeko.github.io">oneNeko</a>
+author_info: <a href="http://oneneko.github.io">oneNeko</a>
 description: "嗨，我是oneNeko，一名C++开发者，有时也会用Python鼓捣一些有趣的东西..."
 keywords: 算法,C++,Python,Python爬虫,oneNeko,Blog,博客
 
@@ -12,7 +12,6 @@ paginate_path: "page/:num/"
 plugins: [jekyll-paginate]
 
 highlighter: Rouge
-since: 2019
+since: 2020
 
-cdn: https://cdn.jsdelivr.net/gh/oneNeko/oneNeko.github.io
 excerpt_separator:  '<!-- more -->'
