--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: https://blog.oneneko.com
 feed: /atom.xml
 author_info: <a href="http://oneneko.github.io">oneNeko</a>
 description: "嗨，我是oneNeko，一名C++开发者，有时也会用Python鼓捣一些有趣的东西..."
-keywords: 算法,C++,Python,Python爬虫,oneNeko,Blog,博客
+keywords: 算法,C++,Python,oneNeko,Blog,博客
 
 paginate: 10
 paginate_path: "page/:num/"
