--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-permalink: /:title.html
-
+# SEO
 title: oneNeko
 url: https://blog.oneneko.com
-feed: /atom.xml
 author_info: <a href="http://oneneko.github.io">oneNeko</a>
 description: "嗨，我是oneNeko，一名C++开发者，有时也会用Python鼓捣一些有趣的东西..."
 keywords: 算法,C++,Python,oneNeko,Blog,博客
 
+# 站点相关
+permalink: /posts/:year/:month/:day/:title.html
 paginate: 10
 paginate_path: "page/:num/"
 plugins: [jekyll-paginate]
@@ -16,6 +16,3 @@ kramdown:
   input: GFM
 
 highlighter: Rouge
-since: 2020
-
-excerpt_separator:  '<!-- more -->'
